--- a/Time-series prediction.ipynb
+++ b/Time-series prediction.ipynb
@@ -565,7 +565,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Forvinnsl á gögnum í næstu tveimur sellum"
+    "### Forvinnsla á gögnum í næstu tveimur sellum"
    ]
   },
   {
