Reshape replaced by Transpose

--- a/Time-series prediction.ipynb
+++ b/Time-series prediction.ipynb
@@ -13,9 +13,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "from urllib import request\n",
     "import requests\n",
@@ -42,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +109,7 @@
        "(4669, 15)"
       ]
      },
-     "execution_count": 396,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +211,7 @@
        "2000-05-04               97.0631           21.5  "
       ]
      },
-     "execution_count": 397,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +323,7 @@
        "2008-12-02              234.2506           26.5  "
       ]
      },
-     "execution_count": 398,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +344,7 @@
        "16.24703748125937"
       ]
      },
-     "execution_count": 399,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +365,7 @@
        "16.318"
       ]
      },
-     "execution_count": 400,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,16 +444,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 404,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1cca1d598d0>]"
+       "[<matplotlib.lines.Line2D at 0x1825f3180f0>]"
       ]
      },
-     "execution_count": 404,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -496,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 405,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -513,16 +521,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 406,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1cc90c06c88>"
+       "<matplotlib.legend.Legend at 0x1825badd470>"
       ]
      },
-     "execution_count": 406,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -567,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 417,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 418,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,18 +617,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 419,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "inputs_train, outputs_train = make_data_and_labels(training_data, output_lookaheads)\n",
-    "inputs_train = np.reshape(inputs_train, (inputs_train.shape[0], inputs_train.shape[2], inputs_train.shape[1]))\n",
+    "inputs_train = np.transpose(inputs_train, (0,2,1))\n",
     "\n",
     "inputs_test, outputs_test = make_data_and_labels(testing_data, output_lookaheads)\n",
-    "inputs_test = np.reshape(inputs_test, (inputs_test.shape[0], inputs_test.shape[2], inputs_test.shape[1]))\n",
+    "inputs_test = np.transpose(inputs_test, (0,2,1))\n",
     "\n",
     "inputs_all, outputs_all = make_data_and_labels(all_data, output_lookaheads)\n",
-    "inputs_all = np.reshape(inputs_all, (inputs_all.shape[0], inputs_all.shape[2], inputs_all.shape[1]))"
+    "inputs_all = np.transpose(inputs_all, (0,2,1))"
    ]
   },
   {
